<resources>
    <string name="app_name">OtterBenchmark</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Activity Name -->
    <string name="title_activity_network_test">Network Test</string>
    <string name="title_activity_storage_test">Storage Test</string>
    <string name="title_activity_gps_monitor">GPS Monitor</string>
    <string name="title_activity_system_info">System Info</string>

    <!-- Common -->
    <string name="test_start">TEST START</string>
    <string name="test_cancel">TEST CANCEL</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>

    <!-- Network -->
    <string name="network_url">URL:</string>
    <string name="network_connection_time">Connection Time:</string>
    <string name="network_file_size">File Size:</string>
    <string name="network_elapsed_time">Elapsed Time:</string>
    <string name="network_download_speed">Download Speed:</string>
    <string name="network_status">Status:</string>

    <!-- Storage -->
    <string name="storage_path">Path:</string>
    <string name="storage_file_size">File Size:</string>
    <string name="storage_elapsed_time">Elapsed Time:</string>
    <string name="storage_download_speed">Download Speed:</string>
    <string name="storage_status">"Status:</string>
    
    <!-- GPS -->
    <string name="gps_location_settings">Location Settings</string>
    <string name="gps_not_support_location_service">Not support location service.</string>
    <string name="gps_gps_status">GPS Status:</string>
    <string name="gps_network_status">Network Status:</string>
    <string name="gps_passive_status">Passive Status:</string>
    <string name="gps_provider">Provider:</string>
    <string name="gps_accuracy">Accuracy:</string>
    <string name="gps_longitude">Longitude:</string>
    <string name="gps_latitude">Latitude:</string>
    <string name="gps_bearing">Bearing:</string>
    <string name="gps_altitude">Altitude:</string>
    <string name="gps_speed">Speed:</string>
    <string name="gps_time">Time:</string>
    <string name="gps_max_satellites">Max Satellites:</string>
    <string name="gps_satellites">Satellites:</string>
    <string name="gps_first_fix_time">First Fix Time:</string>
    <string name="gps_time_stamp">Time Stamp:</string>
    <string name="gps_nmea">NMEA:</string>

    <!-- System -->
    <string name="system_rotate_screen">Rotate Screen</string>
    <string name="system_require_api_23">Requires API Level 23</string>
    <string name="system_incremental">Incremental:</string>
    <string name="system_codename">Code Name:</string>
    <string name="system_release">Version :</string>
    <string name="system_sdk_int">SDK Ver:</string>
    <string name="system_preview_sdk_int">Preview SDK:</string>
    <string name="system_base_os">Base OS:</string>
    <string name="system_security_patch">Security Patch:</string>
    <string name="system_user">user:</string>
    <string name="system_manufacturer">Manufacturer:</string>
    <string name="system_host">Host:</string>
    <string name="system_brand">Brand:</string>
    <string name="system_product">Product:</string>
    <string name="system_model">Model:</string>
    <string name="system_id">ID:</string>
    <string name="system_time">Time:</string>
    <string name="system_type">Build Type:</string>
    <string name="system_tags">Build Tags:</string>
    <string name="system_display">Build ID:</string>
    <string name="system_fingerprint">Fingerprint:</string>
    <string name="system_device">Device:</string>
    <string name="system_board">Board:</string>
    <string name="system_hardware">Hardware:</string>
    <string name="system_serial">Serial:</string>
    <string name="system_bootloader">Bootloader:</string>
    <string name="system_cpu_abi">CPU/ABI:</string>
    <string name="system_radio">Radio:</string>
</resources>
