<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".storage.StorageTest">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true" >

        <TextView
            android:layout_gravity="end"
            android:text="@string/storage_path" />

        <Spinner
            android:id="@+id/path_spinner"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_gravity="end"
            android:text="@string/storage_file_size" />

        <TextView
            android:id="@+id/file_size"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_gravity="end"
            android:text="@string/storage_elapsed_time" />

        <TextView
            android:id="@+id/elapsed_time"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_gravity="end"
            android:text="@string/storage_download_speed" />

        <TextView
            android:id="@+id/download_speed"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_gravity="end"
            android:text="@string/storage_status" />

        <TextView
            android:id="@+id/status"
            android:layout_gravity="fill_horizontal" />
    </GridLayout>

    <Button
        android:id="@+id/test_start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/test_start" />

    <Button
        android:id="@+id/test_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/test_cancel" />
</LinearLayout>
